syntax = "proto3";

package protos;


message UserInfo {
  string ID = 1;
  string DisplayName = 2;
  string PasswordHash = 3;
  string Description = 4;
  string Extra = 5;
  string CreatedAt = 6;
  string UpdatedAt = 7;
}

message UserInfos {
  repeated UserInfo Data = 1;
}

message ListUserOutput {
  int64 count = 1;
  repeated UserInfo Data = 2;
}

message UserID {
  string ID = 1;
}